# ksci

./: .gitmodules  CMakeLists.txt  README.md
include/: FileUtils.hpp  InstructionParser.hpp  Program.hpp
src/: Fileutils.cpp  InstructionParser.cpp  main.cpp
test/: deneme.ks  ksci
